# youtube_cli-v2

./: .gitignore  LICENSE  app.py  cfg.txt  install.sh  pyproject.toml  readme.md  readme.md.save  requirements.txt
src/youtube_cli/: __main__.py  style.css
